<resources>
    <string name="app_name">Incidencias</string>
    <string name="navegacion_open">Abierto</string>
    <string name="navigation_drawer_close">Cerrado</string>

    <!--Actividad DatosInicioSesion -->
    <string name="InfoInicioSesion">Iniciar Sesion con Educantabria:</string>
    <string name="InicioSesionEducantabria">Educantabria</string>
    <string name="InicioSesionDominio">Dominio</string>

    <!--Actividad DatosInicioSesion -->
    <string name="vas_iniciar_sesion_con">Vas iniciar sesion con educantabria</string>
    <string name="vas_a_inicar_sesion_con">Vas a inicar sesion con el dominio</string>
    <string name="btniniciar_sesion">Iniciar Sesion</string>
    <string name="btnAtras">Atras</string>
    <string name="incidenciasToolbar">Incidencias</string>
    <string name="editar_incidencia">EDITAR INCIDENCIA</string>
    <string name="aceptarcambios">Aceptar</string>
    <string name="escribetucomentario">Escribe tu comentario sobre esta incidencia</string>
    <string name="hint_escribetucomentario">Escribe tu comentario</string>

    <!--  Actividad Crear Incidencia Tipo   -->
    <string name="crear_incidencia_tipo">CREAR INCIDENCIA TIPO</string>
    <string name="CreacionTipo_tipo">Tipo:</string>
    <string-array name="tipo_array">
        <item>EQUIPOS</item>
        <item>CUENTAS</item>
        <item>WIFI</item>
        <item>INTERNET</item>
        <item>SOFTWARE</item>
    </string-array>

    <string name="creacionTipo_tipo_nombre">Tipo Nombre:</string>
    <string-array name="tipo_nombre_array_equipo">
        <item>PC</item>
        <item>ALTAVOCES</item>
        <item>MONITOR</item>
        <item>PROYECTOR</item>
        <item>PANTALLA</item>
        <item>PORTATIL</item>
        <item>IMPRESORAS</item>
    </string-array>
    <string-array name="tipo_nombre_array_cuentas">
        <item>EDUCANTABRIA</item>
        <item>GOOGLE CLASSROOM</item>
        <item>DOMINIO</item>
        <item>YEDRA</item>
    </string-array>
    <string-array name="tipo_nombre_array_wifi">
        <item>iesmiguelherrero</item>
        <item>WIECAN</item>
    </string-array>
    <string-array name="tipo_nombre_array_internet">
        <item>INSTALACION</item>
        <item>ACTUALIZACION</item>
    </string-array>
    <string name="creacionTiposubtipo">Subtipo</string>

    <string-array name="tipo_nombre_array_pc">
        <item>ORDENADOR</item>
        <item>RATÓN</item>
        <item>TECLADO</item>
    </string-array>
    <string-array name="tipo_nombre_array_portatil">
        <item>PROPORCIONADO POR CONSERJERIA</item>
        <item>DE AULA</item>
    </string-array>

    <string-array name="tipo_nombre_array_yedra">
        <item>GESTION J.EST.</item>
    </string-array>


    <string name="crearTipoguardar">Guardar</string>
    <string name="CrearTipocancelar">Cancelar</string>

    <!-- Actividiad Crear Incidencia -->
    <string name="CrearIncidenciaAula">Aula:</string>
    <string name="crearequipo">Equipo:</string>
    <string name="CrearEtiqueta">Etiqueta:</string>
    <string name="CrearDescripcion">Descripcion:</string>
    <string name="Crearfecha_inicio">Fecha Inicio:</string>
    <string name="Crear">Crear</string>
    <string name="CrearIncidenciaCancelar">Cancelar</string>
    <string name="IncidenteCompleto_tipoincidente">Tipo Incidente:</string>
    <string name="IncidenciaCompletafecha_creada">Fecha-Creada:</string>
    <string name="Editaraula">Aula:</string>
    <string name="EditEquipo">Equipo:</string>
    <string name="Editetiqueta">Etiqueta:</string>
    <string name="Edtitipo">Tipo:</string>
    <string name="Editnombre">Nombre</string>
    <string name="descripcion_de_la_incidencia">Descripcion de la incidencia:</string>
    <string name="EditSubtipo">Subtipo:</string>


</resources>